GoNoGo/force-app/main/default/objects/Go_No_Go_Question_Bank_Scoring__c/Go_No_Go_Question_Bank_Scoring__c.object-meta.xml
<CustomObject>
    <description>Stores scoring for each question.</description>
    <label>Go/No-Go Question Response</label>
    <nameField>
        <displayFormat>GNGQBS-{0000}</displayFormat>
        <label>Go/No-Go Question Scoring Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Go/No-Go Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>