GoNoGo/force-app/main/default/objects/Go_No_Go_Question_Bank_Scoring__c/fields/Min_Range__c.field-meta.xml
<CustomField>
    <fullName>Min_Range__c</fullName>
    <description>Expected value of answer (required when Comparison Type of related Go/No-Go Question Bank is Range)</description>
    <label>Min Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>