GoNoGo/force-app/main/default/objects/Go_No_Go_Question_Bank_Scoring__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Stores score of the answer.</description>
    <inlineHelpText>The value added to the final Go/No-Go Score when this response is selected. This score cannot exceed the question&apos;s max score.</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>