GoNoGo/force-app/main/default/objects/Go_No_Go_Question_Bank_Scoring__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Expected value of answer (required when Comparison Type of related Go/No-Go Question Bank is Value)</description>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>