GoNoGo/force-app/main/default/objects/Go_No_Go_Question_Bank_Scoring__c/validationRules/Max_Score_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Score_Validation</fullName>
    <active>true</active>
    <description>Max Score Validation</description>
    <errorConditionFormula>IF(ISNULL(Go_No_Go_Question_Bank__r.Max_Score__c), false, Go_No_Go_Question_Bank__r.Max_Score__c &lt; Score__c)</errorConditionFormula>
    <errorDisplayField>Score__c</errorDisplayField>
    <errorMessage>Question score exceeds max score.</errorMessage>
</ValidationRule>